--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1 class="title">Instagram Caption Generator</h1>
+            <h1 class="title">Instagram Caption Generator!</h1>
 
         </div>
 
